[package]
name = "redismodule_cmd_procmacros"
version = "0.1.0"
authors = ["Zhao Lang <eltoshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
docgen = []

[dependencies]
syn = { version = "=1.0.32", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["nightly"] }
